// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Request password reset container tests renders container consistently 1`] = `
<div
  className="Signup"
>
  <RequestPasswordReset
    disabled={true}
    errorMsg={null}
    isDisplayed={false}
    loading={false}
    message="success"
    onInputChange={[Function]}
    onSubmit={[Function]}
    showError={false}
  />
</div>
`;

exports[`Request password reset container tests renders container correctly with fetch error 1`] = `
<div
  className="Signup"
>
  <RequestPasswordReset
    disabled={true}
    errorMsg="error"
    isDisplayed={true}
    loading={false}
    message="success"
    onInputChange={[Function]}
    onSubmit={[Function]}
    showError={true}
  />
</div>
`;
